@@ -121,16 +121,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
          http://marc.theaimsgroup.com/?l=apache-httpd-dev&m=113813652015559
        +1: colm, trawick, jim
 
-    *) core: Prevent read of unitialized memory in ap_rgetline_core. PR 39282.
-        Trunk version of patch:
-          http://svn.apache.org/viewcvs?rev=394070&view=rev
-        2.0.x version of patch:
-          http://issues.apache.org/bugzilla/attachment.cgi?id=18112
-      +1: rpluem, colm
-      niq: change comment "if bb only contains an EOS bucket"
-           to "if bb contains only zero-length buckets"
-           and you have my +1
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ please place SVN revisions from trunk here, so it is easy to
     identify exactly what the proposed changes are!  Add all new
